--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -16,7 +16,10 @@
         app:cardCornerRadius="10dp"
         tools:ignore="PrivateResource,UnusedAttribute">
 
+
+
         <RelativeLayout
+            android:background="?android:attr/selectableItemBackground"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
